--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>atividade_dupla</title>
 </head>
 <body>
-    
+    <h1>Praticando em dupla</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis explicabo, aspernatur dignissimos esse, fugiat error eius deserunt tenetur doloremque odit dolor sapiente dicta itaque ut porro optio illo animi in.</p>
 </body>
 </html>
