--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Praticando em dupla</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis explicabo, aspernatur dignissimos esse, fugiat error eius deserunt tenetur doloremque odit dolor sapiente dicta itaque ut porro optio illo animi in.</p>
+    <p>Clique <a href="novapagina.html">aqui</a> para ir para pagina 2</p>
 </body>
 </html>
